Migrated to Java 16 (no preview features)