@@ -24,9 +24,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lombok.version>1.18.16</lombok.version>
-        <record.builder.version>1.18-java15</record.builder.version>
-        <java.version>15</java.version>
+        <lombok.version>1.18.20</lombok.version>
+        <record.builder.version>1.19</record.builder.version>
+        <java.version>16</java.version>
     </properties>
 
     <dependencies>
@@ -65,7 +65,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
                             <groupId>org.projectlombok</groupId>
@@ -85,7 +85,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+<!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
                 </configuration>
             </plugin>
         </plugins>
